# code-courtroom

./: .env.example  .gitignore  Dockerfile  README.md  config.py  deploy.py  main.py  orchestrator.py  prompt.py  pyproject.toml  requirements.txt
agents/: agent.py  prompt.py
agents/compliance_agent/: __init__.py  agent.py  prompt.py
agents/defendant_agent/: __init__.py  agent.py  prompt.py
agents/judge_agent/: agent.py  prompt.py
agents/optimizer_agent/: __init__.py  agent.py  prompt.py
agents/prosecutor_agent/: __init__.py  agent.py  prompt.py
agents/rewriter_agent/: __init__.py  agent.py  prompt.py
backend/: main.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentAvatar.tsx  CodeInput.tsx
frontend/src/pages/: Index.tsx
sub_agents/compliance_agent/: __init__.py  agent.py  prompt.py
sub_agents/defendant_agent/: __init__.py  agent.py  prompt.py
sub_agents/judge_agent/: __init__.py  prompt.py
sub_agents/optimizer_agent/: __init__.py  prompt.py
sub_agents/optimzer_agent/: __init__.py  agent.py  prompt.py
sub_agents/prosecutor_agent/: __init__.py  prompt.py
